:sparkles: feat: app layout, protected route

--- a/src/styles/components/layout/AppLayout.module.scss
+++ b/src/styles/components/layout/AppLayout.module.scss
@@ -11,6 +11,8 @@
 
     padding: 1.5rem 3rem;
     border-block-end: 1px solid var(--colors-light-300);
+
+    background-color: #fff;
   }
 
   &_main {
