:sparkles: feat: homepage, package slice, basket logic

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,22 +1,11 @@
 :root {
   /* colors */
   --colors-primary: 24, 144, 255;
-  --colors-green-active: 218, 234, 105;
-
-  --colors-dark-default: #000;
-  --colors-dark-100: #0d0d0f;
-  --colors-dark-200: #17181a;
-  --colors-dark-300: #222427;
-  --colors-dark-400: #323438;
-  --colors-dark-500: #404145;
-  --colors-dark-600: #4a4b4c;
-  --colors-dark-700: #57585a;
-  --colors-dark-800: #66686a;
-  --colors-dark-900: #737579;
+  --colors-green: 122, 197, 0;
 
   --colors-light-default: #fffffe;
   --colors-light-100: #f6f6fa;
-  --colors-light-200: #e8eaef;
+  --colors-light-200: #ebecee;
   --colors-light-300: #d6d8da;
   --colors-light-400: #c4c4c9;
   --colors-light-500: #b0b1b4;
