--- a/src/styles/components/loader/loader.module.scss
+++ b/src/styles/components/loader/loader.module.scss
@@ -4,7 +4,7 @@
   inline-size: 2rem;
   block-size: 2rem;
 
-  border: 3px solid var(--colors-light-default);
+  border: 3px solid #fffffe;
   border-bottom-color: transparent;
   border-radius: var(--radius-rounded);
 
