--- a/src/styles/components/layout/AppLayout.module.scss
+++ b/src/styles/components/layout/AppLayout.module.scss
@@ -14,7 +14,7 @@
     padding: 0.75rem 3rem;
     border-block-end: 1px solid var(--colors-light-300);
 
-    background-color: #fff;
+    background-color: #000;
 
     &_logo {
       display: flex;
@@ -31,7 +31,9 @@
         gap: 0.625rem;
         padding: 0.875rem 0.5rem;
         border-radius: var(--radius-md);
+
         background-color: transparent;
+        color: #fffffe;
 
         transition: 150ms background-color var(--transition-curve);
         will-change: cursor, background-color;
