:lipstick: style: improve design, responsive

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,16 +5,16 @@
   --colors-mastercard-red: #eb001b;
   --colors-mastercard-yellow: #ff5f00;
 
-  --colors-light-default: #000;
-  --colors-light-100: #111;
-  --colors-light-200: #262626;
-  --colors-light-300: #343434;
-  --colors-light-400: #474747;
-  --colors-light-500: #565656;
-  --colors-light-600: #a1a3a5;
-  --colors-light-700: #909294;
-  --colors-light-800: #838484;
-  --colors-light-900: #78797a;
+  --colors-shade-default: #000;
+  --colors-shade-100: #111;
+  --colors-shade-200: #262626;
+  --colors-shade-300: #343434;
+  --colors-shade-400: #474747;
+  --colors-shade-500: #565656;
+  --colors-shade-600: #a1a3a5;
+  --colors-shade-700: #909294;
+  --colors-shade-800: #838484;
+  --colors-shade-900: #78797a;
 
   /* utils */
   --radius-xs: 4px;
