--- a/src/styles/pages/paymentSuccess.module.scss
+++ b/src/styles/pages/paymentSuccess.module.scss
@@ -14,8 +14,8 @@
     justify-content: center;
     align-items: center;
 
-    background-color: var(--colors-light-100);
-    border: 1px solid var(--colors-light-300);
+    background-color: var(--colors-shade-100);
+    border: 1px solid var(--colors-shade-300);
     border-radius: var(--radius-sm);
 
     padding: 4rem;
