--- a/src/styles/pages/signup.module.scss
+++ b/src/styles/pages/signup.module.scss
@@ -13,8 +13,8 @@
     inline-size: 100%;
 
     border-radius: var(--radius-sm);
-    background-color: var(--colors-light-100);
-    border: 1px solid var(--colors-light-300);
+    background-color: var(--colors-shade-100);
+    border: 1px solid var(--colors-shade-300);
 
     &_header {
       display: flex;
